test/classes/initializers/generics/declarations/default_value_bad.good
default_value_bad.chpl:13: error: unresolved call 'Foo.init("blah")'
default_value_bad.chpl:7: note: candidates are: Foo.init(xVal = 3)
